add routes and update api doc
